# AdventOfCode

./: .gitignore  LICENSE  README.md
2020/: README.md
Y2021/Rust/aoc_2021/: Cargo.toml
Y2021/Rust/aoc_2021/benches/: d_01.rs  d_02.rs  d_03.rs  d_04.rs  d_05.rs  d_06.rs  d_07.rs  d_08.rs  d_09.rs  d_10.rs  d_11.rs  d_12.rs  d_13.rs  d_14.rs  d_15.rs  d_16.rs
Y2021/Rust/aoc_2021/benches/util/: mod.rs
Y2021/Rust/aoc_2021/src/: bits.rs  errors.rs  extension_traits.rs  integer.rs  iterator.rs  lib.rs  min_heap.rs  pair.rs  puzzles.rs  search.rs  transpose.rs
Y2021/Rust/aoc_2021/src/bits/: iterator.rs
Y2021/Rust/aoc_2021/src/extension_traits/: binary_heap.rs  str.rs  u8.rs  vec.rs
Y2021/Rust/aoc_2021/src/integer/: div_rem.rs  integer_markers.rs  integer_pass_through.rs
Y2021/Rust/aoc_2021/src/iterator/: adjacent.rs
Y2021/Rust/aoc_2021/src/pair/: greater.rs
Y2021/Rust/aoc_2021/src/puzzles/d_01/: mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_02/: README.md  errors.rs  mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_03/: mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_04/: mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_05/: mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_06/: mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_07/: README.md  mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_08/: README.md  dev.rs  mod.rs
Y2021/Rust/aoc_2021/src/puzzles/d_09/: README.md  mod.rs
Y2021/Rust/aoc_2021/tests/: d_01.rs  d_02.rs  d_03.rs  d_04.rs  d_05.rs  d_06.rs  d_07.rs  d_08.rs  d_09.rs  d_10.rs  d_11.rs  d_12.rs  d_13.rs  d_14.rs  d_15.rs  d_16.rs
Y2021/Rust/aoc_2021/tests/util/: mod.rs
(+235 files in other folders)
